Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-13.0.1
----------

  File formats:

  o Added support for ADPCM-encoded PRC files, based on Danny Smith's
    rec2wav and sndcmp.

  o Added AMR-WB format.  (robs)

  Effects:

  o Added soft-knee companding.  (robs)
  o Show (with --octave) compand transfer function.  (robs)
  o Allow e.g. "vol 6dB" (as well as "vol 6 dB").  (robs)

  Other new features:

  o Show (with -S) if clipping is occurring.  (robs)

  Bug fixes:

  o Fix (m)compand transfer function non-linearities; fix compand
    drain volume.  (robs)
  o Fix crash with pan effect.  (robs)
  o Add missing RM define to Makefiles so installs work.
   (Bug# 1666599) (cbagwell)

  Internal improvements:

  o Renamed libst to libsox for name recongition and to avoid
    duplications with other existing libst libraries. (Rueben)
  o Renamed libst-config to more standard sox-config. (cbagwell)
  o Removed library information from sox-config --cflags. (cbagwell)

sox-13.0.0
----------

  File formats:

  o Support for .caf, .paf, .fap, .nist, .w64, .nist, Matlab 4.2/5.0
    (Octave 2.0/2.1), .pvf, .sds, .sd2 and .xi file formats via libsndfile.
    If available, libsndfile can also be used to handle all the other file
    formats it understands.  (Reuben Thomas)
  o Add FLAC support (robs@users.sf.net)
  o Support Maxis's XA format. (Dwayne C. Litzenberger)
  o Add support for 24-bit PCM raw, wav (WAVE_FORMAT_EXTENSIBLE) [FR# 801015],
    au, aiff, & flac files. (robs)
  o Add AIFF-C output support.  (shashimoto)
  o New .ima file format for raw IMA ADPCM.  (robs)
  o Allow the rate and number of channels of .au files to be overridden
    by command-line arguments. (robs@users.sf.net)
  o Add seek support for GSM data in WAV files. Rafal Maszkowski
  o Allow encoding quality to be specified (FLAC & Ogg, but not
    MP3 yet).  (robs)